renamed dimens, fixed accounts layout

--- a/app/src/main/res/layout/fragment_auth_code.xml
+++ b/app/src/main/res/layout/fragment_auth_code.xml
@@ -23,9 +23,9 @@
         android:id="@+id/code_inputs_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_main"
+        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="@dimen/margin_main"
+        android:layout_marginEnd="@dimen/margin_16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:id="@+id/input2"
             android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_x1_5"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:gravity="center"
             android:imeOptions="actionNext"
             android:inputType="phone"
@@ -69,7 +69,7 @@
             android:id="@+id/input3"
             android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_x1_5"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:gravity="center"
             android:imeOptions="actionNext"
             android:inputType="phone"
@@ -86,7 +86,7 @@
             android:id="@+id/input4"
             android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_x1_5"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:gravity="center"
             android:imeOptions="actionDone"
             android:inputType="phone"
