--- a/app/src/main/res/layout/dialog_accounts.xml
+++ b/app/src/main/res/layout/dialog_accounts.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_x1_5"
+    android:layout_margin="@dimen/margin_24dp"
     android:background="@color/continue_color">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:textColor="@color/mainBackground"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,9 +23,9 @@
         android:id="@+id/message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
-        android:layout_marginTop="@dimen/margin_main"
-        android:layout_marginEnd="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/margin_24dp"
         android:textColor="@color/accounts_dialog_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:id="@+id/ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_half"
+        android:layout_marginBottom="@dimen/margin_8dp"
         android:background="?selectableItemBackground"
         android:padding="24dp"
         android:text="@string/understand"
