--- a/app/src/main/res/layout/empty_withdraws_screen.xml
+++ b/app/src/main/res/layout/empty_withdraws_screen.xml
@@ -9,7 +9,7 @@
         android:id="@+id/back_arrow_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_quoter"
+        android:layout_marginStart="@dimen/margin_4dp"
         android:layout_marginTop="12dp"
         android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:id="@+id/notification_image_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_x1_5"
+        android:layout_margin="@dimen/margin_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_notification" />
@@ -29,7 +29,7 @@
         android:id="@+id/add_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_x4"
+        android:layout_marginBottom="@dimen/margin_64dp"
         app:layout_constraintBottom_toTopOf="@+id/add_account_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/no_withdrawal_requests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_x4"
+        android:layout_marginTop="@dimen/margin_64dp"
         android:text="@string/no_withdrawal_requests"
         android:textColor="@color/gray_intro_text"
         android:textSize="20sp"
@@ -64,9 +64,9 @@
         android:id="@+id/add_account_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginStart="@dimen/margin_x1_5"
-        android:layout_marginEnd="@dimen/margin_x1_5"
-        android:layout_marginBottom="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginEnd="@dimen/margin_24dp"
+        android:layout_marginBottom="@dimen/margin_24dp"
         android:background="@drawable/bg_intro_btn"
         android:text="@string/connect_account"
         android:textAllCaps="false"
@@ -80,9 +80,9 @@
         android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginStart="@dimen/margin_x1_5"
-        android:layout_marginEnd="@dimen/margin_x1_5"
-        android:layout_marginBottom="@dimen/margin_x3"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginEnd="@dimen/margin_24dp"
+        android:layout_marginBottom="@dimen/margin_48dp"
         android:background="@drawable/bg_registration_btn"
         android:text="@string/back"
         android:textAllCaps="false"
