--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -9,13 +9,13 @@
         android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/margin_main">
+        android:layout_marginBottom="@dimen/margin_16dp">
 
         <ImageView
             android:id="@+id/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_quoter"
+            android:layout_marginStart="@dimen/margin_4dp"
             android:layout_marginTop="12dp"
             android:padding="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:id="@+id/notification_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_x1_5"
+            android:layout_margin="@dimen/margin_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_notification" />
@@ -70,9 +70,9 @@
                 android:id="@+id/account_background"
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x1_5"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
                 android:id="@+id/add_account_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -115,9 +115,9 @@
                 android:id="@+id/new_account_background"
                 android:layout_width="match_parent"
                 android:layout_height="405dp"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x1_5"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
                 android:id="@+id/new_add_account_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="22dp"
                 android:text="@string/add_account"
                 android:textColor="@color/withdraws_yellow"
@@ -149,9 +149,9 @@
                 android:id="@+id/name_input_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x2"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_32dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:hint="@string/first_middle_name"
                 android:textColorHint="@color/gray_profile"
                 android:textSize="13sp"
@@ -177,9 +177,9 @@
                 android:id="@+id/surname_input_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x2"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:hint="@string/surname"
                 android:textColorHint="@color/gray_profile"
                 android:textSize="13sp"
@@ -205,9 +205,9 @@
                 android:id="@+id/account_input_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x2"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:hint="@string/payment_account"
                 android:textColorHint="@color/gray_profile"
                 android:textSize="13sp"
@@ -233,9 +233,9 @@
                 android:id="@+id/bik_input_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x2"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:hint="@string/bik"
                 android:textColorHint="@color/gray_profile"
                 android:textSize="13sp"
@@ -261,7 +261,7 @@
                 android:id="@+id/add_account_button"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
-                android:layout_margin="@dimen/margin_x1_5"
+                android:layout_margin="@dimen/margin_24dp"
                 android:background="@drawable/bg_intro_btn"
                 android:text="@string/add_button_text"
                 android:textAllCaps="false"
@@ -286,9 +286,9 @@
                 android:id="@+id/background"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x1_5"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:background="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -298,7 +298,7 @@
                 android:id="@+id/bank_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="14dp"
                 android:text="ПАО “Сбербанк”"
                 android:textColor="@color/withdraws_gray"
@@ -310,7 +310,7 @@
                 android:id="@+id/order_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="6dp"
                 android:text="Р/с 408190009938888837"
                 android:textColor="@color/withdraws_gray"
@@ -322,7 +322,7 @@
                 android:id="@+id/name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="8dp"
                 android:text="Поликин Г. И"
                 android:textColor="@color/gray_profile"
@@ -334,7 +334,7 @@
                 android:id="@+id/delete_icon"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:layout_margin="@dimen/margin_main"
+                android:layout_margin="@dimen/margin_16dp"
                 app:layout_constraintEnd_toEndOf="@+id/background"
                 app:layout_constraintTop_toTopOf="@+id/background"
                 app:srcCompat="@drawable/ic_delete" />
@@ -370,9 +370,9 @@
                 android:id="@+id/card_background"
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x1_5"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -382,7 +382,7 @@
                 android:id="@+id/add_card_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:text="@string/add_card"
                 android:textColor="@color/withdraws_yellow"
                 android:textSize="20sp"
@@ -415,9 +415,9 @@
                 android:id="@+id/new_card_background"
                 android:layout_width="match_parent"
                 android:layout_height="207dp"
-                android:layout_marginStart="@dimen/margin_x1_5"
-                android:layout_marginTop="@dimen/margin_x1_5"
-                android:layout_marginEnd="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -427,7 +427,7 @@
                 android:id="@+id/new_add_card_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_x1_5"
+                android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="22dp"
                 android:text="@string/add_card"
                 android:textColor="@color/withdraws_yellow"
@@ -449,7 +449,7 @@
                 android:id="@+id/card_input_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_x1_5"
+                android:layout_margin="@dimen/margin_24dp"
                 android:hint="@string/enter_card_number"
                 android:textColorHint="@color/gray_profile"
                 android:textSize="13sp"
@@ -474,7 +474,7 @@
             <TextView
                 android:layout_width="312dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_x1_5"
+                android:layout_marginTop="@dimen/margin_24dp"
                 android:text="@string/new_card_message"
                 android:textColor="@color/gray_profile"
                 android:textSize="13sp"
@@ -486,7 +486,7 @@
                 android:id="@+id/add_card_button"
                 android:layout_width="0dp"
                 android:layout_height="56dp"
-                android:layout_margin="@dimen/margin_x1_5"
+                android:layout_margin="@dimen/margin_24dp"
                 android:background="@drawable/bg_intro_btn"
                 android:text="@string/add_button_text"
                 android:textAllCaps="false"
