--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_main"
+            android:layout_marginTop="@dimen/margin_16dp"
             android:layout_marginBottom="102dp"
             android:text="@string/intro_message"
             android:textAlignment="center"
@@ -52,9 +52,9 @@
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginStart="@dimen/margin_x1_5"
-            android:layout_marginEnd="@dimen/margin_x1_5"
-            android:layout_marginBottom="@dimen/margin_x1_5"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
+            android:layout_marginBottom="@dimen/margin_24dp"
             android:background="@drawable/bg_intro_btn"
             android:text="@string/login_btn"
             android:textAllCaps="false"
@@ -68,8 +68,8 @@
             android:id="@+id/signup_button"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginStart="@dimen/margin_x1_5"
-            android:layout_marginEnd="@dimen/margin_x1_5"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
             android:layout_marginBottom="46dp"
             android:background="@drawable/bg_registration_btn"
             android:text="@string/registration"
