--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/phone_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_x1_5"
+            android:layout_margin="@dimen/margin_24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_phone" />
@@ -23,7 +23,7 @@
             android:id="@+id/notification_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_x1_5"
+            android:layout_margin="@dimen/margin_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_notification" />
@@ -32,7 +32,7 @@
             android:id="@+id/name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_x4"
+            android:layout_marginTop="@dimen/margin_64dp"
             android:textColor="@color/gray_intro_text"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -56,7 +56,7 @@
             android:id="@+id/balance_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_main"
+            android:layout_marginTop="@dimen/margin_16dp"
             android:textColor="@color/gray_intro_text"
             android:textSize="48sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,14 +67,13 @@
         <TextView
             android:id="@+id/balance_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_main"
+            android:layout_height="74dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="@dimen/margin_main"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
-            android:paddingTop="28dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="24dp"
             android:text="@string/balance"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
@@ -85,14 +84,13 @@
         <TextView
             android:id="@+id/orders_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_main"
+            android:layout_height="74dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_main"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
-            android:paddingTop="28dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="24dp"
             android:text="@string/orders"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
@@ -103,14 +101,13 @@
         <TextView
             android:id="@+id/withdrawal_applications_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_main"
+            android:layout_height="74dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_main"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
-            android:paddingTop="28dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="24dp"
             android:text="@string/withdrawal_applications"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
@@ -121,14 +118,13 @@
         <TextView
             android:id="@+id/accounts_and_cards_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_main"
+            android:layout_height="74dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_main"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
-            android:paddingTop="28dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="24dp"
             android:text="@string/accounts_and_cards"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
@@ -139,14 +135,13 @@
         <TextView
             android:id="@+id/support_service_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_main"
+            android:layout_height="74dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="@dimen/margin_main"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@drawable/bg_profile_gradient"
             android:paddingStart="20dp"
-            android:paddingTop="28dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="24dp"
             android:text="@string/support_service"
             android:textColor="@color/gray_light_profile"
             android:textSize="20sp"
@@ -159,7 +154,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
-            android:layout_marginBottom="@dimen/margin_x1_5"
+            android:layout_marginBottom="@dimen/margin_24dp"
             android:drawableStart="@drawable/ic_logout"
             android:drawablePadding="16dp"
             android:text="@string/exit"
