--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -10,7 +10,7 @@
         android:id="@+id/back_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_quoter"
+        android:layout_marginStart="@dimen/margin_4dp"
         android:layout_marginTop="12dp"
         android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/taxi_icon"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="40dp"
         android:src="@drawable/ic_yandex"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:id="@+id/status_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_x1_5"
+        android:layout_marginEnd="@dimen/margin_24dp"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/circle_image"
@@ -79,7 +79,7 @@
         android:id="@+id/date_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/gray_profile"
         android:textSize="10sp"
@@ -91,9 +91,9 @@
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="@dimen/margin_x1_5"
+        android:layout_marginEnd="@dimen/margin_24dp"
         android:background="@drawable/bg_profile_gradient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
         android:id="@+id/bank_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="14dp"
         android:text="ПАО “Сбербанк”"
         android:textColor="@color/withdraws_gray"
@@ -115,7 +115,7 @@
         android:id="@+id/order_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="6dp"
         android:text="Р/с 408190009938888837"
         android:textColor="@color/withdraws_gray"
@@ -127,7 +127,7 @@
         android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="8dp"
         android:text="Поликин Г. И"
         android:textColor="@color/gray_profile"
@@ -139,7 +139,7 @@
         android:id="@+id/bank_icon"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        android:layout_margin="@dimen/margin_main"
+        android:layout_margin="@dimen/margin_16dp"
         android:src="@drawable/ic_sberbank"
         app:layout_constraintEnd_toEndOf="@+id/background"
         app:layout_constraintTop_toTopOf="@+id/background" />
@@ -149,7 +149,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/withdrawal_title"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
@@ -160,7 +160,7 @@
         android:id="@+id/withdrawal_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="36dp"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
@@ -173,7 +173,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:text="@string/commission_title"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
@@ -184,7 +184,7 @@
         android:id="@+id/commission_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="36dp"
         android:textColor="@color/withdraws_gray"
         android:textSize="16sp"
@@ -197,7 +197,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="36dp"
         android:background="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -208,7 +208,7 @@
         android:id="@+id/total_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_x1_5"
+        android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="44dp"
         android:textColor="@color/withdraws_yellow"
         android:textSize="20sp"
@@ -220,7 +220,7 @@
         android:id="@+id/with_commission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_quoter"
+        android:layout_marginTop="@dimen/margin_4dp"
         android:layout_marginEnd="44dp"
         android:text="@string/with_commission"
         android:textColor="@color/gray_profile"
@@ -232,8 +232,8 @@
         android:id="@+id/back_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginStart="@dimen/margin_x1_5"
-        android:layout_marginEnd="@dimen/margin_x1_5"
+        android:layout_marginStart="@dimen/margin_24dp"
+        android:layout_marginEnd="@dimen/margin_24dp"
         android:layout_marginBottom="48dp"
         android:background="@drawable/bg_registration_btn"
         android:text="@string/back"
