--- a/app/src/main/res/drawable/bg_outline_green.xml
+++ b/app/src/main/res/drawable/bg_outline_green.xml
@@ -6,7 +6,7 @@
                 <shape android:shape="rectangle">
                     <stroke android:width="1dp" android:color="@color/balance_green" />
                     <corners android:radius="4dp" />
-                    <solid android:color="@color/login_background" />
+                    <solid android:color="@color/transparentGray" />
                 </shape>
             </item>
         </ripple>
