--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -283,7 +283,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/add_account_button"
+            android:id="@+id/send_request_button"
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_margin="@dimen/margin_24dp"
