--- a/app/src/main/res/layout/fragment_success_request.xml
+++ b/app/src/main/res/layout/fragment_success_request.xml
@@ -13,7 +13,7 @@
         android:padding="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back_arrow" />
+        app:srcCompat="@drawable/ic_back" />
 
     <ImageView
         android:id="@+id/success_image"
