added load images

--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -229,7 +229,7 @@
             <ImageView
                 android:id="@+id/gett_background"
                 android:layout_width="match_parent"
-                android:layout_height="654dp"
+                android:layout_height="694dp"
                 android:layout_marginStart="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_24dp"
                 android:layout_marginEnd="@dimen/margin_16dp"
@@ -285,7 +285,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:maxLines="1"
@@ -314,7 +315,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:maxLines="1"
@@ -399,7 +401,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="phone"
                     android:maxLines="1"
@@ -478,7 +481,7 @@
             <ImageView
                 android:id="@+id/city_background"
                 android:layout_width="match_parent"
-                android:layout_height="1000dp"
+                android:layout_height="1080dp"
                 android:layout_marginStart="@dimen/margin_16dp"
                 android:layout_marginTop="@dimen/margin_24dp"
                 android:layout_marginEnd="@dimen/margin_16dp"
@@ -534,7 +537,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:maxLines="1"
@@ -563,7 +567,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:maxLines="1"
@@ -688,7 +693,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLines="1"
@@ -717,7 +723,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLines="1"
@@ -746,7 +753,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLines="1"
@@ -775,7 +783,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLines="1"
@@ -816,7 +825,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/gray_profile"
-                    android:enabled="false"
+                    android:drawableEnd="@drawable/ic_download"
+                    android:focusable="false"
                     android:imeOptions="actionDone"
                     android:inputType="number"
                     android:maxLines="1"
