--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -98,7 +98,7 @@
 
     <fragment
         android:id="@+id/successRequestFragment"
-        android:name="taxi.kassa.view.success_request.SuccessRequestFragment"
+        android:name="taxi.kassa.view.auth_sign_up.SuccessRequestFragment"
         android:label="SuccessRequestFragment" />
 
     <fragment
